[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/QuantileWindowPopup.gd" type="Script" id=1]
[ext_resource path="res://Menu/AddQuantileWindowPopup.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu/GradientPreconfPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu/PlainPreconfPopup.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="QuantileWindowPopup" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.0
margin_top = -189.0
margin_right = 375.0
margin_bottom = 189.0
window_title = "Edge Quantile Coloring"
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 725.0
margin_bottom = 353.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 700.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 693.0
margin_bottom = 55.0
text = "Add quantiles with the button assign a color to them.
Edges will then be colored with a gradient interpolation or plain
based on their lengths with respect to the quantiles."

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 700.0
margin_bottom = 116.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 645.0
margin_bottom = 50.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 586.0
margin_bottom = 45.0
custom_constants/separation = 150

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 69.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 13.0
margin_right = 62.0
margin_bottom = 27.0
text = "Gradient"

[node name="PlainColoringCheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 219.0
margin_right = 386.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2
text = "Plain Coloring"

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 536.0
margin_right = 581.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer/PanelContainer3"]
margin_left = 7.0
margin_top = 13.0
margin_right = 38.0
margin_bottom = 27.0
text = "Plain"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 700.0
margin_bottom = 145.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 700.0
margin_bottom = 25.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 695.0
margin_bottom = 25.0
custom_constants/separation = 350
alignment = 1

[node name="GradientPreconfButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer"]
margin_right = 182.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "Gradient Preconfigurations"

[node name="PlainPreconfButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer"]
margin_left = 532.0
margin_right = 690.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "Plain Preconfigurations"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 700.0
margin_bottom = 328.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_right = 230.0
margin_bottom = 179.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 25
custom_constants/margin_top = 5
custom_constants/margin_bottom = 25

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer"]
margin_top = 5.0
margin_right = 205.0
margin_bottom = 154.0

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 198.0
margin_bottom = 142.0
columns = 3

[node name="Quantiles" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer/PanelContainer/GridContainer"]
margin_right = 62.0
margin_bottom = 14.0
text = "Quantiles"

[node name="Colors" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer/PanelContainer/GridContainer"]
margin_left = 88.0
margin_right = 128.0
margin_bottom = 14.0
size_flags_horizontal = 10
text = "Colors"
align = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 198.0
margin_bottom = 142.0
custom_constants/margin_top = 25

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer/PanelContainer/MarginContainer"]
margin_top = 25.0
margin_right = 191.0
margin_bottom = 135.0

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer/PanelContainer/MarginContainer/ScrollContainer"]
margin_right = 191.0
margin_bottom = 44.0
size_flags_horizontal = 3
columns = 3

[node name="Panel0" type="Panel" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer/PanelContainer/MarginContainer/ScrollContainer/GridContainer"]
margin_right = 91.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label0" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer/PanelContainer/MarginContainer/ScrollContainer/GridContainer/Panel0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.5
margin_top = -10.0
margin_right = 67.5
margin_bottom = 10.0
size_flags_horizontal = 2
size_flags_vertical = 5
text = "0"
align = 1
valign = 1

[node name="ColorPickerButton0" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer/PanelContainer/MarginContainer/ScrollContainer/GridContainer"]
margin_left = 95.0
margin_right = 186.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 11
color = Color( 1, 1, 1, 1 )

[node name="Del0" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer/PanelContainer/MarginContainer/ScrollContainer/GridContainer"]
margin_left = 190.0
margin_top = 3.0
margin_right = 190.0
margin_bottom = 17.0

[node name="Panel1" type="Panel" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer/PanelContainer/MarginContainer/ScrollContainer/GridContainer"]
margin_top = 24.0
margin_right = 91.0
margin_bottom = 44.0
size_flags_horizontal = 3

[node name="Label1" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer/PanelContainer/MarginContainer/ScrollContainer/GridContainer/Panel1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.5
margin_top = -10.0
margin_right = 67.5
margin_bottom = 10.0
size_flags_horizontal = 2
size_flags_vertical = 5
text = "1"
align = 1
valign = 1

[node name="ColorPickerButton1" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer/PanelContainer/MarginContainer/ScrollContainer/GridContainer"]
margin_left = 95.0
margin_top = 24.0
margin_right = 186.0
margin_bottom = 44.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 11

[node name="Del1" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer/PanelContainer/MarginContainer/ScrollContainer/GridContainer"]
margin_left = 190.0
margin_top = 27.0
margin_right = 190.0
margin_bottom = 41.0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 234.0
margin_right = 464.0
margin_bottom = 179.0
size_flags_horizontal = 3
custom_constants/margin_right = 25
custom_constants/margin_top = 5
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer2"]
margin_left = 25.0
margin_top = 5.0
margin_right = 205.0
margin_bottom = 154.0
size_flags_horizontal = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer2/VBoxContainer"]
margin_right = 180.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddQuantileButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer2/VBoxContainer/MarginContainer"]
margin_right = 180.0
margin_bottom = 34.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Add quantile"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer2/VBoxContainer"]
margin_top = 38.0
margin_right = 180.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 10

[node name="InvertColorsButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer2/VBoxContainer/MarginContainer4"]
margin_top = 10.0
margin_right = 180.0
margin_bottom = 34.0
size_flags_vertical = 3
toggle_mode = true
text = "Invert Colors"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer2/VBoxContainer"]
margin_top = 76.0
margin_right = 180.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 10

[node name="ApplyButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer2/VBoxContainer/MarginContainer2"]
margin_top = 10.0
margin_right = 180.0
margin_bottom = 34.0
mouse_default_cursor_shape = 2
size_flags_vertical = 3
text = "Apply"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer2/VBoxContainer"]
margin_top = 114.0
margin_right = 180.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 10

[node name="DiscardButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer2/VBoxContainer/MarginContainer3"]
margin_top = 10.0
margin_right = 180.0
margin_bottom = 35.0
mouse_default_cursor_shape = 2
size_flags_vertical = 3
text = "Do not apply"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 468.0
margin_right = 698.0
margin_bottom = 179.0
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 5
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer3"]
margin_left = 25.0
margin_top = 5.0
margin_right = 230.0
margin_bottom = 154.0

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer3/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 198.0
margin_bottom = 142.0
columns = 2

[node name="Quantiles" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer3/PanelContainer/GridContainer"]
margin_right = 62.0
margin_bottom = 14.0
text = "Quantiles"

[node name="Colors" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer3/PanelContainer/GridContainer"]
margin_left = 151.0
margin_right = 191.0
margin_bottom = 14.0
size_flags_horizontal = 10
text = "Colors"
align = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer3/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 198.0
margin_bottom = 142.0
custom_constants/margin_top = 25

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer3/PanelContainer/MarginContainer"]
margin_top = 25.0
margin_right = 191.0
margin_bottom = 135.0

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer3/PanelContainer/MarginContainer/ScrollContainer"]
margin_right = 191.0
margin_bottom = 20.0
size_flags_horizontal = 3
columns = 5

[node name="Panel0" type="Panel" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer3/PanelContainer/MarginContainer/ScrollContainer/GridContainer"]
margin_right = 54.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label0" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer3/PanelContainer/MarginContainer/ScrollContainer/GridContainer/Panel0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.5
margin_top = -10.0
margin_right = 67.5
margin_bottom = 10.0
size_flags_horizontal = 2
size_flags_vertical = 5
text = "0"
align = 1
valign = 1

[node name="LabelTo" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer3/PanelContainer/MarginContainer/ScrollContainer/GridContainer"]
margin_left = 58.0
margin_right = 71.0
margin_bottom = 20.0
size_flags_vertical = 5
text = "to"
align = 1
valign = 1

[node name="Panel1" type="Panel" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer3/PanelContainer/MarginContainer/ScrollContainer/GridContainer"]
margin_left = 75.0
margin_right = 129.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label1" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer3/PanelContainer/MarginContainer/ScrollContainer/GridContainer/Panel1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.5
margin_top = -10.0
margin_right = 67.5
margin_bottom = 10.0
size_flags_horizontal = 2
size_flags_vertical = 5
text = "1"
align = 1
valign = 1

[node name="Panel2" type="Panel" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer3/PanelContainer/MarginContainer/ScrollContainer/GridContainer"]
visible = false
margin_left = 75.0
margin_right = 129.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="LineEdit1" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer3/PanelContainer/MarginContainer/ScrollContainer/GridContainer/Panel2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )
align = 1

[node name="ColorPickerButton0Right" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer3/PanelContainer/MarginContainer/ScrollContainer/GridContainer"]
margin_left = 133.0
margin_right = 187.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 11
color = Color( 1, 1, 1, 1 )

[node name="Del0" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/MarginContainer3/PanelContainer/MarginContainer/ScrollContainer/GridContainer"]
margin_left = 191.0
margin_top = 3.0
margin_right = 191.0
margin_bottom = 17.0

[node name="AddQuantileWindowPopup" parent="." instance=ExtResource( 2 )]

[node name="GradientPreconfPopup" parent="." instance=ExtResource( 3 )]

[node name="PlainPreconfPopup" parent="." instance=ExtResource( 4 )]

[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer/PlainColoringCheckButton" to="." method="_on_PlainColoringCheckButton_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer/GradientPreconfButton" to="." method="_on_GradientPreconfButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer/PlainPreconfButton" to="." method="_on_PlainPreconfButton_pressed"]
[connection signal="color_changed" from="MarginContainer/VBoxContainer/GridContainer/MarginContainer/PanelContainer/MarginContainer/ScrollContainer/GridContainer/ColorPickerButton0" to="." method="_on_ColorPickerButton0_color_changed"]
[connection signal="color_changed" from="MarginContainer/VBoxContainer/GridContainer/MarginContainer/PanelContainer/MarginContainer/ScrollContainer/GridContainer/ColorPickerButton1" to="." method="_on_ColorPickerButton1_color_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/MarginContainer2/VBoxContainer/MarginContainer/AddQuantileButton" to="." method="_on_AddQuantileButton_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/GridContainer/MarginContainer2/VBoxContainer/MarginContainer4/InvertColorsButton" to="." method="_on_InvertColorsButton_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/MarginContainer2/VBoxContainer/MarginContainer2/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/MarginContainer2/VBoxContainer/MarginContainer3/DiscardButton" to="." method="_on_DiscardButton_pressed"]
[connection signal="color_changed" from="MarginContainer/VBoxContainer/GridContainer/MarginContainer3/PanelContainer/MarginContainer/ScrollContainer/GridContainer/ColorPickerButton0Right" to="." method="_on_ColorPickerButton0Right_color_changed"]
